--- a/style.css
+++ b/style.css
@@ -20,35 +20,6 @@ a:hover {
     cursor: pointer;
 }
 
-/* icone fontawesome Resaux sociaux */
-@font-face {
-    font-family: 'FontAwesome';
-    src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
-    src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
-    font-weight: normal;
-    font-style: normal
-}
-.fa {
-    display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-}
-.fa-twitter:before {
-    content: "\f099"
-}
-.fa-facebook:before {
-    content: "\f09a"
-}
-.fa-dribbble:before {
-    content: "\f17d"
-}
-.fa-instagram:before {
-    content: "\f16d"
-}
-
 .bloc {
     width: 100%;
     clear: both;
@@ -673,7 +644,8 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    /*color: #575757!important;*/
+    color: black!important;
 }
 
 .container {
@@ -797,7 +769,8 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    /*color: #F3976C!important;*/
+    color: #FCE4D9!important;
 }
 
 .btn-atomic-tangerine {
